; ModuleID = '/home/carl/AnghaBench/winfile/src/extr_wfdrop.c_CreateDropTarget.c'
source_filename = "/home/carl/AnghaBench/winfile/src/extr_wfdrop.c_CreateDropTarget.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

@E_INVALIDARG = common dso_local global i32 0, align 4
@S_OK = common dso_local global i32 0, align 4
@E_OUTOFMEMORY = common dso_local global i32 0, align 4

; Function Attrs: noinline nounwind optnone uwtable
define dso_local i32 @CreateDropTarget(i32 %0, i32** %1) #0 {
  %3 = alloca i32, align 4
  %4 = alloca i32, align 4
  %5 = alloca i32**, align 8
  store i32 %0, i32* %4, align 4
  store i32** %1, i32*** %5, align 8
  %6 = load i32**, i32*** %5, align 8
  %7 = icmp eq i32** %6, null
  br i1 %7, label %8, label %10

8:                                                ; preds = %2
  %9 = load i32, i32* @E_INVALIDARG, align 4
  store i32 %9, i32* %3, align 4
  br label %23

10:                                               ; preds = %2
  %11 = load i32, i32* %4, align 4
  %12 = call i32* @WF_IDropTarget_new(i32 %11)
  %13 = load i32**, i32*** %5, align 8
  store i32* %12, i32** %13, align 8
  %14 = load i32**, i32*** %5, align 8
  %15 = load i32*, i32** %14, align 8
  %16 = icmp ne i32* %15, null
  br i1 %16, label %17, label %19

17:                                               ; preds = %10
  %18 = load i32, i32* @S_OK, align 4
  br label %21

19:                                               ; preds = %10
  %20 = load i32, i32* @E_OUTOFMEMORY, align 4
  br label %21

21:                                               ; preds = %19, %17
  %22 = phi i32 [ %18, %17 ], [ %20, %19 ]
  store i32 %22, i32* %3, align 4
  br label %23

23:                                               ; preds = %21, %8
  %24 = load i32, i32* %3, align 4
  ret i32 %24
}

declare dso_local i32* @WF_IDropTarget_new(i32) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
